# elevator-simulation

./: .ccls  .gitignore  CMakeLists.txt  README.md  style.css
include/: shared.h  sigs.h
src/: liftBody.c  liftCtrl.c  liftMng.c  main.c  ope1.c  opex.c  sensor.c  shared.c  vec.c
